# market-making

./: .gitignore  Dockerfile  Makefile  README.md  conftest.py  docker-compose.yml  pyproject.toml  spec.txt
.github/workflows/: ci.yml
scripts/: init_db.sql  run_backtest.py  train_ppo.py
src/: run.py
src/agents/: avellaneda_stoikov.py  maml_meta.py  ppo_agent.py  s4_model.py
src/backtesting/: engine.py  microstructure.py
src/data/: lob_state.py  pipeline.py  timescale_writer.py  ws_client.py
src/env/: market_making_env.py
src/features/: hmm_regime.py  microstructure.py
src/rust_engine/: Cargo.toml
src/rust_engine/src/: lib.rs
src/trading/: circuit_breaker.py  live_trader.py  order_manager.py
tests/: test_backtester.py  test_circuit_breaker.py  test_env.py  test_features.py  test_hmm.py  test_lob_state.py  test_maml.py  test_ppo_agent.py  test_s4_network.py
